# srh2d-qc-agent

./: .gitignore  PROJECT_CONTEXT.md  README.md  activate_env.bat  environment.yml  install.bat  mesh_nodes.csv  pyproject.toml  testing.ipynb  testing_agent.ipynb  testing_agent_chat.ipynb  testing_agent_chat_Demo.ipynb
docs/: QC_checklist.docx
notebooks/: testing.ipynb  testing_agent.ipynb  testing_agent_chat.ipynb  testing_agent_chat_Demo.ipynb
src/srh2d_qc/: __main__.py
src/srh2d_qc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/srh2d_qc/agent/: agent_core.py  agent_loop.py  agent_state.py  agent_tools.py  chat_agent.py  fix_strategies.py
src/srh2d_qc/checks/: bc_consistency.py  materials.py  mesh_quality.py  timestep_stability.py
src/srh2d_qc/core/: bc_utils.py  model_types.py
src/srh2d_qc/io/: model_loader.py  parser.py
src/srh2d_qc/io/parsers/: __init__.py  materials.py  mesh.py  run_config.py
src/srh2d_qc/io/parsers/boundary_conditions/: __init__.py  bcs_bcfile.py  bcs_geom.py  bcs_hydro.py  (+1 more)
src/srh2d_qc/llm/: __init__.py  reasoner.py
src/srh2d_qc/qc_engine/: report.py  runner.py
src/srh2d_qc/utils/: material_utils.py
tests/: full_agent_test.py  test_Agent_run.py  test_llm.py
tests/model-2/: case01.srhgeom  case01.srhhydro
tests/model_1/: model.bc  model.mat  model.mesh  model.srhhydro
tests/model_2/: case01.srhmat  qc_report_20260409_1154.md  qc_report_20260409_1219.md  qc_report_20260409_1233.md  qc_report_20260416_1214.md  qc_report_llm.md
tests/model_3/: B3216_v4.srhgeom  B3216_v4.srhhydro  B3216_v4.srhmat
