[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srh2d-qc"
version = "0.1.0"
description = "SRH2D Quality Control Agent"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "shapely",
    "h5py",
    "pyyaml",
    "rich",
    "tabulate",
    "openai",
    "python-dotenv",
]

[tool.setuptools]
packages = ["srh2d_qc"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pylance]
pythonPath = "./src"

[tool.pyright]
pythonPath = "./src"
